# PINNS_1d_heat_equation

./: README.md  fdm_1D.py  fdm_2D.PY  pyproject.toml
