[project]
name = "first-approach"
version = "0.1.0"
description = ""
authors = [
    {name = "arosas",email = "arosas@cantilever.com.mx"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=1.26.0,<2.2.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
